# agi_perception

./: .gitmodules  pyproject.toml  requirements.txt
.docker/: Dockerfile  docker-compose.yml
agi_perception/: segmentate_image.py
agi_perception/config/: checkpoints.py
